# testapp

./: .env-example  .gitignore  Dockerfile  config.py  pyproject.toml
app/: __init__.py  database.py  routes.py
app/comments/: __init__.py  controllers.py  routes.py
app/comments/lib/: __init__.py  generate_comment_routes.py  summarizer_comments.py
app/comments/models/: __init__.py  comment.py  field_comment.py  resource_comment.py
app/filters/: __init__.py  controllers.py  routes.py
app/filters/lib/: __init__.py  generate_filter_routes.py
app/filters/models/: __init__.py  field_filter.py  metadata_filter.py  resource_filter.py
app/lib/: __init__.py  base_model.py  logger.py  types.py  validate_request.py
app/summarize/: __init__.py  controllers.py  routes.py
app/summarize/lib/: __init__.py  marshall_models.py  summarizer_models.py
app/summarize/lib/diff_databases/: __init__.py  diff_databases.py
app/summarize/lib/diff_databases/lib/: __init__.py  calculate_model_delta.py  helpers.py  take_commit_snapshot.py  update_fields.py  update_marshall_repo.py  update_metadata.py  update_relationships.py  update_resources.py
app/summarize/lib/differencer/: __init__.py  helpers.py  update_fields.py  update_metadata.py  update_relationships.py  update_resources.py
app/summarize/lib/extractors/: __init__.py  abstract_resource.py  mongo.py  postgres.py  resource.py  summarizer.py
app/summarize/models/: __init__.py  commit_snapshot.py  field.py  metadata.py  relationship.py  resource.py
scripts/: init.sh  refresh.sh
src/: default_transformer.py  marshall_models.py  mongo.py  postgres.py  resource.py
